--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
+  opacity: .3;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -19,7 +20,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +36,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-nav {}
+
+.App-nav  .App-link {
+  margin: 0 1rem 0 0;
 }
